# quant-finance-progs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  efficient_frontier.html  pyproject.toml
.github/workflows/: ci.yml
data/: AAPL-2024-01-01to2025-01-01.parquet
foundations/: 02_stats.ipynb  03_visualizing_risk.ipynb  finance_calculator.py  market_data.py  npv_and_irr.py  visualizing_risk.ipynb
foundations/data/: AAPL-2024-01-01to2025-01-01.parquet
section-2/: beta.ipynb  black_scholes.py  efficient_frontier.py  optimized_binomial_tree.py  recursive_binomial_tree.py
