[project]
name = "quant-finance-progs"
version = "0.1.0"
description = "Repository of quant-finance projects (or \"progs\")."
authors = [
    {name = "MouseTrap-codes",email = "mousetrapcodes@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"
mypy = "^1.17.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
