[project]
name = "quant-finance-progs"
version = "0.1.0"
description = "Repository of quant-finance projects (or \"progs\")."
authors = [
    {name = "MouseTrap-codes",email = "mousetrapcodes@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.65,<0.3.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
]

[tool.poetry]
packages = [
    { include = "foundations" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"
mypy = "^1.17.0"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.poetry.scripts]
market_data_101 = "foundations.market_data:test"
